make.log
g++    -c -o test/catch_amalgamated.o test/catch_amalgamated.cpp
g++    -c -o test/test.o test/test.cpp
In file included from test/test.cpp:3:
test/test.cpp: In function ‘int main()’:
test/./catch_amalgamated.hpp:6143:9: error: cannot declare static function inside another function
 6143 |         static void TestName(); \
      |         ^~~~~~
test/./catch_amalgamated.hpp:6151:9: note: in expansion of macro ‘INTERNAL_CATCH_TESTCASE2’
 6151 |         INTERNAL_CATCH_TESTCASE2( INTERNAL_CATCH_UNIQUE_NAME( CATCH2_INTERNAL_TEST_ ), __VA_ARGS__ )
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
test/./catch_amalgamated.hpp:6361:28: note: in expansion of macro ‘INTERNAL_CATCH_TESTCASE’
 6361 |   #define TEST_CASE( ... ) INTERNAL_CATCH_TESTCASE( __VA_ARGS__ )
      |                            ^~~~~~~~~~~~~~~~~~~~~~~
test/test.cpp:9:9: note: in expansion of macro ‘TEST_CASE’
    9 |         TEST_CASE("Color tags are converted", "[color]") {
      |         ^~~~~~~~~
test/./catch_amalgamated.hpp:6147:18: error: expected identifier before ‘{’ token
 6147 |         namespace{ const Catch::AutoReg INTERNAL_CATCH_UNIQUE_NAME( autoRegistrar )( Catch::makeTestInvoker( &TestName ), CATCH_INTERNAL_LINEINFO, Catch::StringRef(), Catch::NameAndTags{ __VA_ARGS__ } ); } /* NOLINT */ \
      |                  ^
test/./catch_amalgamated.hpp:6151:9: note: in expansion of macro ‘INTERNAL_CATCH_TESTCASE2’
 6151 |         INTERNAL_CATCH_TESTCASE2( INTERNAL_CATCH_UNIQUE_NAME( CATCH2_INTERNAL_TEST_ ), __VA_ARGS__ )
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
test/./catch_amalgamated.hpp:6361:28: note: in expansion of macro ‘INTERNAL_CATCH_TESTCASE’
 6361 |   #define TEST_CASE( ... ) INTERNAL_CATCH_TESTCASE( __VA_ARGS__ )
      |                            ^~~~~~~~~~~~~~~~~~~~~~~
test/test.cpp:9:9: note: in expansion of macro ‘TEST_CASE’
    9 |         TEST_CASE("Color tags are converted", "[color]") {
      |         ^~~~~~~~~
test/test.cpp:9:58: error: a function-definition is not allowed here before ‘{’ token
    9 |         TEST_CASE("Color tags are converted", "[color]") {
      |                                                          ^
make: *** [<builtin>: test/test.o] Error 1
